--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -85,6 +85,7 @@ collections:
       - {name: "name", label: "Name", widget: "string", i18n: true}
       - {name: "job_title", label: "Job Title", widget: "string", i18n: true}
       - {name: "image", label: "Image", widget: "image", i18n: duplicate}
+      - {name: "order", label: "Order", widget: "number", i18n: duplicate}
       - name: "education"
         label: "Education"
         widget: "relation"
@@ -146,6 +147,31 @@ collections:
     fields:
       - {name: "title", label: "Title", widget: "string", i18n: duplicate}
       - {name: "name", label: "Name", widget: "string", i18n: true}
+  - name: "articles"
+    label: "Articles"
+    folder: "src/content/articles"
+    create: true
+    i18n: true
+    fields:
+      - {name: "title", label: "Title", widget: "string", i18n: duplicate}
+      - {name: "name", label: "Name", widget: "string", i18n: true}
+      - {name: "date", label: "Date", widget: "datetime", i18n: duplicate}
+      - {name: "image", label: "Image", widget: "image", i18n: duplicate}
+      - {name: 'body', label: 'Description', widget: 'markdown', i18n: true}
+  - name: "testimonials"
+    label: "Testimonials"
+    folder: "src/content/testimonials"
+    create: true
+    i18n: true
+    fields:
+      - {name: "title", label: "Title", widget: "string", i18n: duplicate}
+      - {name: "name", label: "Name", widget: "string", required: false, i18n: true}
+      - {name: "company", label: "Company", widget: "string", required: false, i18n: true}
+      - {name: "position", label: "Position", widget: "string", required: false, i18n: true}
+      - {name: "date", label: "Date", widget: "datetime", required: false, i18n: duplicate}
+      - {name: "image", label: "Image", widget: "image", required: false, i18n: duplicate}
+      - {name: "featured", label: "Featured", widget: "boolean", i18n: duplicate}
+      - {name: 'body', label: 'Description', widget: 'markdown', i18n: true}
 
 
 
